--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   injectable: ^1.0.5
   get_it: 4.0.4
   freezed_annotation: ^0.12.0
+  firebase_core: ^0.5.2
+  firebase_auth: ^0.18.3
+  flutter_bloc: ^6.1.1
   flutter:
     sdk: flutter
 
@@ -34,9 +37,11 @@ dependencies:
 
 dev_dependencies:
   injectable_generator: ^1.0.6
-  build_runner: ^1.10.3
-  freezed: ^0.12.2
+  build_runner: ^1.10.6
+  freezed: ^0.12.3
   json_serializable: ^3.5.0
+  mockito: ^4.1.3
+  bloc_test: ^7.1.0
   flutter_test:
     sdk: flutter
 
