--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   firebase_core: ^0.5.2
   firebase_auth: ^0.18.3
   flutter_bloc: ^6.1.1
+  font_awesome_flutter: ^8.10.0
+  google_fonts: ^1.1.1
+  google_sign_in: ^4.5.6
+  sign_in_with_apple: ^2.5.4
   flutter:
     sdk: flutter
 
