--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,23 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.4 <3.0.0"
 
 dependencies:
   injectable: ^1.0.5
   get_it: 4.0.4
   freezed_annotation: ^0.12.0
-  firebase_core: ^0.5.2
-  firebase_auth: ^0.18.3
+  firebase_core: ^0.5.3
+  firebase_auth: ^0.18.4+1
+  cloud_firestore: ^0.14.4
+  firebase_remote_config: ^0.4.3
+  shared_preferences: ^0.5.12+4
   flutter_bloc: ^6.1.1
   font_awesome_flutter: ^8.10.0
   google_fonts: ^1.1.1
   google_sign_in: ^4.5.6
   sign_in_with_apple: ^2.5.4
+  dio: ^3.0.10
   flutter:
     sdk: flutter
 
@@ -41,9 +45,9 @@ dependencies:
 
 dev_dependencies:
   injectable_generator: ^1.0.6
-  build_runner: ^1.10.6
+  build_runner: ^1.10.7
   freezed: ^0.12.3
-  json_serializable: ^3.5.0
+  json_serializable: ^3.5.1
   mockito: ^4.1.3
   bloc_test: ^7.1.0
   flutter_test:
