--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_sign_in: ^4.5.6
   sign_in_with_apple: ^2.5.4
   dio: ^3.0.10
+  carousel_slider: ^2.3.1
   flutter:
     sdk: flutter
 
